feat: add swagger function and basic auth
